buildscript {
    repositories {
        jcenter()
        mavenCentral()

        maven {
            url "https://sandec.jfrog.io/artifactory/repo"

        }
    }

    dependencies {
        classpath 'com.sandec.jpro:jpro-plugin-gradle:2021.1.2'
    }
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.google.osdetector'

compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'http://oss.sonatype.org/content/repositories/snapshots'
    }
    maven {
        url 'https://nexus.gluonhq.com/nexus/content/repositories/releases/'
    }
}

ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os

dependencies {
    compile "org.openjfx:javafx-base:15:$platform"
    compile "org.openjfx:javafx-graphics:15:$platform"
    compile "org.openjfx:javafx-controls:15:$platform"
    compile "org.openjfx:javafx-fxml:15:$platform"
    compile "org.openjfx:javafx-media:15:$platform"
    compile "org.openjfx:javafx-web:15:$platform"
    compile 'com.github.almasb:fxgl:11.7'
}


compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.fxml,javafx.controls'
        ]
    }
}


run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.fxml,javafx.controls'
        ]
    }
}


apply plugin: 'com.sandec.jpro'

mainClassName = 'com.almasb.fxgltest.WebApp'

jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 55555
}
